--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   --Light-Gray: hsl(204, 43%, 93%);
   --Grayish-Blue: hsl(218, 22%, 67%);
   --Cyan: hsl(179, 62%, 43%);
+  --Cyan-2: hsl(179, 62%, 75%);
   --Bright-Yellow: hsl(71, 73%, 54%);
 }
 
@@ -35,17 +36,71 @@ body {
   padding: 2rem;
   border-radius: 8px 8px 0 0;
 }
-.grid-1 h2{
-    color: var(--Cyan);
-    margin-bottom: 1rem;
+.grid-1 h2 {
+  color: var(--Cyan);
+  margin-bottom: 1rem;
 }
 
-.grid-1 h3{
-    color: var(--Bright-Yellow);
-    margin-bottom: 1rem;
+.grid-1 h3 {
+  color: var(--Bright-Yellow);
+  margin-bottom: 1rem;
 }
 
-.grid-1 p{
-    color: var(--Grayish-Blue);
-    line-height: 1.5rem;
+.grid-1 p {
+  color: var(--Grayish-Blue);
+  line-height: 1.5rem;
+}
+
+.grid-2 {
+  background-color: var(--Cyan);
+  border-radius: 0 0 0 8px;
+  padding: 2rem;
+}
+.grid-2 h3{
+  color: white;
+  margin-bottom: 1rem;
+
+}
+
+.dollar{
+  color: white;
+  font-size: 35px;
+}
+
+.grid_2_text{
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
+  margin-top: 1rem;
+}
+.monthly{
+  color: var(--Cyan-2);
+  font-size: 18px;
+  margin-left: 5px;
+  
+}
+
+.btn{
+  background-color: var(--Bright-Yellow);
+  color: white;
+  padding: 15px 15px;
+  border: none;
+  border-radius: 8px;
+  width: 80%;
+  font-weight: 600;
+  font-size: 20px;
+  font-family: var(--font);
+  display: inline-block;
+  margin: 2rem 0;
+}
+
+.grid-3{
+  background-color: var(--Cyan-2);
+  padding: 2rem;
+  border-bottom-right-radius: 8px;
+}
+
+.grid-3 h3{
+  color: rgb(240, 239, 239);
+  margin-bottom: 1rem;
 }
